--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+
+- name: configure UTC time
+  shell: ln -fs /usr/share/zoneinfo/UTC /etc/localtime
+
 - name: manage /usr/local/sbin/sethostname.sh
   copy:
     src: sethostname.sh
