modified:   roles/aws-nat/tasks/main.yml 	new file:   roles/base/files/selinux-config 	modified:   roles/base/tasks/main.yml 	new file:   roles/base/tasks/no-selinux.yml

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 
+- name: include no-selinux
+  include: no-selinux.yml
+
 - name: configure UTC time
   shell: ln -fs /usr/share/zoneinfo/UTC /etc/localtime
 
