--- a/roles/aws-nat/tasks/main.yml
+++ b/roles/aws-nat/tasks/main.yml
@@ -9,3 +9,13 @@
 
 - name: execute /usr/local/sbin/configure-pat.sh
   shell: /usr/local/sbin/configure-pat.sh
+
+     #/sbin/iptables -t nat -A POSTROUTING -o eth0 -s 0.0.0.0/0 -j MASQUERADE
+     #/sbin/iptables-save > /etc/sysconfig/iptables
+     #    # Configure ip forwarding and redirects
+     #    echo 1 >  /proc/sys/net/ipv4/ip_forward && echo 0 >  /proc/sys/net/ipv4/conf/eth0/send_redirects
+     #mkdir -p /etc/sysctl.d/
+     #
+     #/etc/sysctl.d/nat.conf
+     #net.ipv4.ip_forward = 1
+     #net.ipv4.conf.eth0.send_redirects = 0
