modified:   aws-nat.yml 	modified:   base.yml 	modified:   jumpcloud.yml 	modified:   roles/base/tasks/main.yml

--- a/aws-nat.yml
+++ b/aws-nat.yml
@@ -1,10 +1,5 @@
-- hosts: localhost
-
-  remote_user: root
+- hosts: nat
   become: yes
-
-  #vars_files:
-  #  - ~/ansible-secrets/vars/jumpcloud.yml
-
+  become_user: root
   roles:
     - aws-nat
