--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -15,4 +15,4 @@
     mode: 0750
 
 - name: execute /usr/local/sbin/sethostname.sh
-  shell: /usr/local/sbin/sethostname.sh
+  shell: /usr/local/sbin/sethostname.sh {{ name }}
