--- a/base.yml
+++ b/base.yml
@@ -1,11 +1,6 @@
-- hosts: localhost
-
-  remote_user: root
+- hosts: all
   become: yes
-
-  #vars_files:
-  #  - ~/ansible-secrets/vars/jumpcloud.yml
-
+  become_user: root
   roles:
     - base
     - sshd
