modified:   base.yml 	modified:   readme.rst

--- a/base.yml
+++ b/base.yml
@@ -1,6 +1,8 @@
 - hosts: all
   become: yes
   become_user: root
+  vars_files:
+    - ~/ansible-secrets/vars/jumpcloud.yml
   roles:
     - base
     - sshd
