modified:   roles/base/tasks/main.yml 	modified:   roles/base/tasks/no-selinux.yml 	modified:   roles/jumpcloud/tasks/main.yml 	new file:   roles/nat/handlers/main.yml 	modified:   roles/nat/tasks/main.yml

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -13,6 +13,9 @@
     owner: root
     group: root
     mode: 0750
+  register: sethostname
 
 - name: execute /usr/local/sbin/sethostname.sh
   shell: /usr/local/sbin/sethostname.sh {{ name }}
+  when: sethostname.changed
+
