--- a/roles/jenkins-build-host/tasks/main.yml
+++ b/roles/jenkins-build-host/tasks/main.yml
@@ -38,7 +38,7 @@
     
 - name: Install haproxy build dependencies.
   yum:
-    name: {{ items }}
+    name: "{{ items }}"
     state: installed
   with_items:
     - pcre-devel
