--- a/jenkins-master.yml
+++ b/jenkins-master.yml
@@ -1,7 +1,7 @@
 - hosts: localhost
 
-  remote_user: root
   become: yes
+  become_user: root
 
   vars_files:
     - ~/ansible-secrets/vars/jenkins-master.yml
