--- a/roles/base/tasks/no-selinux.yml
+++ b/roles/base/tasks/no-selinux.yml
@@ -12,3 +12,4 @@
 - name: disable selinux now, execute 'setenforce 0' 
   shell: setenforce 0
   when: selinux_config.changed
+  ignore_errors: true
