modified:   nat.yml 	modified:   roles/base/tasks/main.yml 	new file:   roles/nginx/handlers/main.yml 	new file:   roles/nginx/tasks/main.yml 	new file:   roles/tomcat/files/tomcat-initscript.sh 	new file:   roles/tomcat/handlers/main.yaml 	new file:   roles/tomcat/tasks/main.yaml

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -19,3 +19,7 @@
   shell: /usr/local/sbin/sethostname.sh {{ name }}
   when: sethostname.changed
 
+- name: install epel-release repo.
+  yum:
+    name: epel-release
+
