--- a/roles/tomcat/tasks/main.yaml
+++ b/roles/tomcat/tasks/main.yaml
@@ -8,7 +8,6 @@
   become_method: sudo
 
 - name: Download Tomcat
-  #get_url: url=http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.61/bin/apache-tomcat-7.0.61.tar.gz dest=/opt/apache-tomcat-7.0.61.tar.gz
   get_url:
     url: http://www.trieuvan.com/apache/tomcat/tomcat-8/v8.0.36/bin/apache-tomcat-8.0.36.tar.gz
     dest: /opt/apache-tomcat.tar.gz
@@ -25,19 +24,17 @@
 - name: Change ownership of Tomcat installation
   file: path=/usr/share/tomcat/ owner=tomcat group=tomcat state=directory recurse=yes
 
-#- name: Configure Tomcat server
-#  template: src=server.xml dest=/usr/share/tomcat/conf/
-#  notify: restart tomcat
-#
-#- name: Configure Tomcat users
-#  template: src=tomcat-users.xml dest=/usr/share/tomcat/conf/
-#  notify: restart tomcat
+- name: manage /etc/default/tomcat
+  when: tomcat_env is defined
+  copy:
+    content: |
+      {{ tomcat_env }}
+    dest: /etc/default/tomcat
+  notify: restart tomcat
 
 - name: Install Tomcat init script
   copy: src=tomcat-initscript.sh dest=/etc/init.d/tomcat mode=0755
+  notify: restart tomcat
 
 - name: Start Tomcat
   service: name=tomcat state=started enabled=yes
-
-#- name: wait for tomcat to start
-#  wait_for: port={{http_port}}
