--- a/roles/s3p/tasks/main.yaml
+++ b/roles/s3p/tasks/main.yaml
@@ -1,7 +1,7 @@
 ---
 
 - name: install s3p for building release pipelines
-  shell: pip install --upgrade git+https://github.com/russellballestrini/s3p.git
+  shell: pip install git+https://github.com/russellballestrini/s3p.git
 
 - name: install awscli for building release pipelines
-  shell: pip install --upgrade awscli
+  shell: pip install awscli
