new file:   ansible.cfg 	modified:   base.yml 	modified:   install-ansible-on-centos-6.sh 	modified:   jumpcloud.yml 	new file:   mongodb.yml 	modified:   nat.yml 	modified:   roles/base/tasks/main.yml 	new file:   roles/base/tasks/netcat.yml 	new file:   roles/certificates/files/generate_cert.sh 	new file:   roles/certificates/files/make_ca.sh 	new file:   roles/certificates/files/openssl.cfg 	new file:   roles/certificates/handlers/main.yml 	new file:   roles/certificates/tasks/install_certificates.yml 	new file:   roles/certificates/tasks/main.yml 	new file:   roles/java/files/pem-to-java-truststore-importer.sh 	new file:   roles/java/tasks/main.yml 	new file:   roles/java/tasks/manage-truststore.yml 	modified:   roles/jumpcloud/tasks/main.yml 	new file:   roles/mongodb/files/mongod.conf 	new file:   roles/mongodb/files/mongodb-org-3.2.repo 	new file:   roles/mongodb/handlers/main.yml 	new file:   roles/mongodb/tasks/main.yml 	modified:   roles/nginx/tasks/main.yml 	modified:   roles/tomcat/tasks/main.yaml

--- a/base.yml
+++ b/base.yml
@@ -1,9 +1,13 @@
 - hosts: all
   become: yes
   become_user: root
+  vars_prompt:
+    - name: vpc_name
+      private: no
   vars_files:
-    - ~/ansible-secrets/vars/jumpcloud.yml
+    - ~/ansible-secrets/vars/{{ vpc_name }}.yml
   roles:
     - base
     - sshd
     - jumpcloud
+    - certificates
