modified:   base.yml 	modified:   mongodb.yml 	modified:   roles/jumpcloud/tasks/main.yml 	modified:   roles/mongodb/tasks/main.yml 	new file:   roles/ntp/tasks/main.yml

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -44,5 +44,5 @@
   when: rs_initiate.changed
   shell: echo "rs.add(\"{{ hostvars[item]['name'] }}.{{ vpc_name }}.local\")" | mongo --quiet
   # this loops over all the ip addresses in the inventory and 
-  with_items: "{{ groups.db }}"
+  with_items: "{{ groups.mongodb }}"
 
