modified:   jenkins-build-host.yml 	modified:   jenkins-master.yml 	modified:   roles/certificates/files/generate_cert.sh 	modified:   roles/certificates/files/make_ca.sh 	modified:   roles/jenkins-build-host/tasks/main.yml 	new file:   roles/nodejs/tasks/main.yml 	new file:   roles/s3p_release/README.rst 	new file:   roles/s3p_release/handlers/main.yml 	new file:   roles/s3p_release/tasks/main.yml 	modified:   roles/sshd/files/sshd_config

--- a/jenkins-master.yml
+++ b/jenkins-master.yml
@@ -1,10 +1,14 @@
-- hosts: localhost
+- hosts: master
 
   become: yes
   become_user: root
 
+  vars_prompt:
+    - name: vpc_name
+      private: no
+
   vars_files:
-    - ~/ansible-secrets/vars/jenkins-master.yml
+    - ~/ansible-secrets/vars/{{ vpc_name }}.yml
 
   roles:
     - java
