--- a/jenkins-build-host.yml
+++ b/jenkins-build-host.yml
@@ -3,11 +3,17 @@
   become: yes
   become_user: root
 
-  #vars_files:
-  #  - ~/ansible-secrets/vars/jenkins-master.yml
+  vars_prompt:
+    - name: vpc_name
+      private: no
+
+  vars_files:
+    - ~/ansible-secrets/vars/{{ vpc_name }}.yml
 
   roles:
-    - role : java
+    - role : base
     - role : fpm
     - role : s3p
+    - role : java
+    - role : nodejs
     - role : jenkins-build-host
