modified:   base.yml 	modified:   install-ansible-on-centos-6.sh 	modified:   mongodb.yml 	new file:   roles/aws-inspector-agent/tasks/main.yaml 	modified:   roles/base/files/sethostname.sh 	new file:   roles/certificates/readme.rst 	modified:   roles/certificates/tasks/install_certificates.yml 	new file:   roles/java/files/US_export_policy.jar 	new file:   roles/java/files/encryption-util.jar 	new file:   roles/java/files/local_policy.jar 	modified:   roles/java/tasks/main.yml 	new file:   roles/java/tasks/unlimited-jce.yaml 	modified:   roles/jenkins-master/defaults/main.yml 	modified:   roles/jenkins-master/tasks/setup-RedHat.yml 	new file:   roles/mongodb/defaults/main.yml 	new file:   roles/mongodb/files/mongodb-enterprise.repo 	modified:   roles/mongodb/tasks/main.yml 	new file:   roles/mysql-client/tasks/main.yml 	new file:   roles/nat/files/loadiptables.service 	modified:   roles/nat/handlers/main.yml 	modified:   roles/nat/tasks/main.yml 	new file:   roles/nginx-tls-proxy/defaults/main.yml 	new file:   roles/nginx-tls-proxy/readme.rst 	new file:   roles/nginx-tls-proxy/tasks/main.yml 	new file:   roles/nginx-tls-proxy/templates/tls-proxy.conf.j2 	modified:   roles/nginx-tomcat-proxy/tasks/main.yaml 	new file:   roles/nginx/files/proxy_params 	modified:   roles/nginx/tasks/main.yml 	modified:   roles/nodejs/tasks/main.yml 	modified:   roles/s3p_release/handlers/main.yml 	modified:   roles/sshd/files/sshd_config 	modified:   roles/sshd/tasks/main.yml 	new file:   roles/swagger-ui/readme.rst 	new file:   roles/swagger-ui/tasks/main.yml 	new file:   roles/swagger-ui/templates/swagger-ui.include.j2

--- a/base.yml
+++ b/base.yml
@@ -6,9 +6,11 @@
       private: no
   vars_files:
     - ~/ansible-secrets/vars/{{ vpc_name }}.yml
+    - ~/ansible-secrets/vars/common.yml
   roles:
     - base
-    - sshd
     - ntp
     - jumpcloud
+    - sshd
     - certificates
+    #- aws-inspector-agent
