--- a/roles/jenkins-master/defaults/main.yml
+++ b/roles/jenkins-master/defaults/main.yml
@@ -4,7 +4,13 @@ jenkins_connection_retries: 60
 jenkins_hostname: localhost
 jenkins_http_port: 8080
 jenkins_jar_location: /opt/jenkins-cli.jar
-jenkins_plugins: []
+
+jenkins_plugins:
+  - git
+  - ssh-agent
+  - ssh-slaves
+  - thinBackup
+
 jenkins_url_prefix: ""
 jenkins_java_options: "-Djenkins.install.runSetupWizard=false"
 
