--- a/roles/nodejs/tasks/main.yml
+++ b/roles/nodejs/tasks/main.yml
@@ -10,10 +10,19 @@
     name: npm
     state: installed
 
+- name: Ensure bower is installed.
+  npm:
+    name: bower
+    global: true
+
+- name: Ensure gulp is installed.
+  npm:
+    name: gulp
+    global: true
+
 - name: Create a node user to own code / processes.
   user: 
     name: node
     shell: /bin/bash
     comment: service user for running Node.js applications.
     append: yes
-
