a lot of work on mongodb
	modified:   roles/certificates/files/generate_cert.sh
	modified:   roles/certificates/tasks/install_certificates.yml
	modified:   roles/mongodb/defaults/main.yml
	new file:   roles/mongodb/files/mongo-back.sh
	new file:   roles/mongodb/files/mongodb-enterprise-3.2.repo
	new file:   roles/mongodb/files/mongodb-enterprise-3.4.repo
	new file:   roles/mongodb/files/mongodb-org-3.4.repo
	modified:   roles/mongodb/handlers/main.yml
	modified:   roles/mongodb/tasks/main.yml
	new file:   roles/mongodb/templates/mongod.conf.j2
	new file:   roles/mongodb/templates/mongodb.data.at.rest.encryption.key.j2
	modified:   roles/nginx-tls-proxy/templates/tls-proxy.conf.j2
	modified:   roles/nginx-tomcat-proxy/files/tomcat-proxy.conf

--- a/roles/certificates/tasks/install_certificates.yml
+++ b/roles/certificates/tasks/install_certificates.yml
@@ -10,11 +10,19 @@
   copy:
     src: ~/ansible-secrets/files/{{ vpc_name }}.local/CA/certs/{{ vpc_name }}.local.crt
     dest: /etc/pki/tls/certs/
+  register: internal_vpc_crt
 
 - name: manage internal VPC private key (key) in /etc/pki/tls/private
   copy:
     src: ~/ansible-secrets/files/{{ vpc_name }}.local/CA/private/{{ vpc_name }}.local.key
     dest: /etc/pki/tls/private/
+  register: internal_vpc_key
+
+- name: manage internal mongodb VPC private key and crt combo in /etc/pki/tls/private
+  shell: cat private/{{ vpc_name }}.local.key certs/{{ vpc_name }}.local.crt > private/mongodb.{{ vpc_name }}.local.pem
+  args:
+    chdir: /etc/pki/tls
+  when: internal_vpc_crt.changed or internal_vpc_key.changed
 
 - name: copy ~/ansible-secrets/files/tls/ to /etc/pki/tls/
   copy:
