--- a/roles/nginx-tomcat-proxy/files/tomcat-proxy.conf
+++ b/roles/nginx-tomcat-proxy/files/tomcat-proxy.conf
@@ -3,6 +3,12 @@ server {
         listen          [::]:80 default_server;
         server_name     _;
 
+        # Support CORS (running javascript on two different domain names).
+        add_header Access-Control-Allow-Origin '*' always;
+        add_header Access-Control-Allow-Headers Authorization,Content-Type always;
+        add_header Access-Control-Allow-Credentials true always;
+        add_header Access-Control-Allow-Methods GET,OPTIONS,POST,PUT,UPDATE,DELETE always;
+
         location / {
                 proxy_set_header X-Forwarded-Host $host;
                 proxy_set_header X-Forwarded-Server $host;
