new file:   roles/alertlogic/files/send-to-alertlogic.conf 	new file:   roles/alertlogic/tasks/main.yml 	new file:   roles/automox/handlers/main.yml 	new file:   roles/automox/tasks/main.yml 	new file:   roles/automox/vars/main.yml 	new file:   roles/automox/vars/secret.yml 	new file:   roles/base/default/main.yml 	new file:   roles/base/tasks/hostname.yml 	modified:   roles/base/tasks/main.yml 	new file:   roles/certificates/default/main.yml 	copied:     roles/certificates/tasks/main.yml -> roles/certificates/tasks/create_certificates.yml 	modified:   roles/certificates/tasks/main.yml 	new file:   roles/jumpcloud/default/main.yml 	modified:   roles/jumpcloud/tasks/main.yml 	new file:   roles/jumpcloud/tasks/packer.yml 	new file:   roles/jumpcloud/tasks/register-and-tag.yml 	modified:   roles/mongodb/files/mongo-back.sh 	modified:   roles/mongodb/tasks/main.yml 	new file:   roles/mongodb/templates/mongo-back.conf.j2 	modified:   roles/mongodb/templates/mongod.conf.j2 	new file:   roles/rsyslog/default/main.yml 	new file:   roles/rsyslog/files/logrotate-syslog 	new file:   roles/rsyslog/files/rsyslog.repo 	new file:   roles/rsyslog/handlers/main.yml 	new file:   roles/rsyslog/tasks/main.yml 	new file:   roles/rsyslog/templates/send-to-remote.conf.j2

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -9,15 +9,9 @@
 - name: configure UTC time
   shell: ln -fs /usr/share/zoneinfo/UTC /etc/localtime
 
-- name: execute sethostname.sh
-  script: sethostname.sh "{{ name }}.{{ vpc_name }}.local"
-
-# AWS clobbers hostname on reboots, this prevents it.
-- name: preserve_hostname in /etc/cloud/cloud.cfg
-  lineinfile:
-    dest: /etc/cloud/cloud.cfg
-    regexp: '^preserve_hostname:'
-    line: 'preserve_hostname: true'
+- name: include hostname
+  include: hostname.yml
+  when: not packer
 
 - name: install epel-release repo.
   yum:
