new file:   alertlogic/defaults/main.yml 	modified:   alertlogic/files/send-to-alertlogic.conf 	modified:   automox/vars/secret.yml 	new file:   aws-cloudwatch-agent/defaults/main.yml 	new file:   aws-cloudwatch-agent/tasks/main.yml 	new file:   aws-cloudwatch-agent/templates/awslogs.conf.j2 	new file:   aws-cloudwatch-agent/vars/main.yml 	new file:   jumpcloud/defaults/main.yml 	modified:   jumpcloud/tasks/main.yml

--- a/roles/jumpcloud/tasks/main.yml
+++ b/roles/jumpcloud/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Check if JumpCloud is already installed
-  shell: "[ -f /opt/jc/jcagent.conf ] && echo 'found' || echo 'not-found'"
+  shell: "[ -f /opt/jc/version.txt ] && echo 'found' || echo 'not-found'"
   register: jc_installed
 
 - name: Install JumpCloud
