new file:   alertlogic.yml 	new file:   automox.yml 	new file:   aws-cloudwatch-agent.yml 	modified:   base.yml 	new file:   certificates.yml 	modified:   jumpcloud.yml

--- a/automox.yml
+++ b/automox.yml
@@ -1,18 +1,11 @@
+---
 - hosts: all:!alertlogic
-  become: yes
+  become: true
   become_user: root
   vars_prompt:
     - name: vpc_name
       private: no
   vars_files:
-    - ~/ansible-secrets/vars/{{ vpc_name }}.yml
     - ~/ansible-secrets/vars/common.yml
   roles:
-    - base
-    - ntp
-    - jumpcloud
     - automox
-    - sshd
-    - certificates
-    - rsyslog
-    - aws-inspector-agent
